<resources>
    <string name="app_name">KotlinHub</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_in_short">Login</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="open_source_licenses"><a>Open Source Licenses</a></string>
    <string name="click_to_login">Click to Login</string>

    <string name="repo_description_template">[%1$s](%2$s)/[%3$s](%4$s) \n\n Created by [%5$s](%6$s) on %7$s</string>
    <string name="settings">Setting</string>
    <string name="about">About</string>
    <string name="profile">Profile</string>
    <string name="news">Feeds</string>
    <string name="organizations">Organization</string>
    <string name="notifications">Notification</string>
    <string name="pinned">Bookmarks</string>
    <string name="trending">Trend</string>
    <string name="gists">Gists</string>
    <string name="home">Home</string>
    <string name="repo">Repo</string>
    <string name="search">Search</string>
    <string name="brvah_loading">Loading…</string>
    <string name="brvah_load_failed">Sorry, data loading error</string>
    <string name="brvah_load_end">No more data</string>
    <string name="brvah_empty">No more data，click to retry</string>
    <string name="just_now">just now</string>
    <string name="seconds_ago">seconds ago</string>
    <string name="minutes_ago">minutes ago</string>
    <string name="hours_ago">hours ago</string>
    <string name="days_ago">days ago</string>

    <string name="created_comment_on_commit">Created comment on commit in %1$s</string>
    <string name="created_comment_on_issue">Created comment on issue %1$d in %2$s</string>
    <string name="created_repo">Created repository %1$s</string>
    <string name="forked_to">Forked %1$s to %2$s</string>
    <string name="starred_repo">Starred %1$s</string>
    <string name="push_to">Push to %1$s at %2$s</string>
    <string name="created_tag_at">Created tag %1$s at %2$s</string>
    <string name="created_branch_at">Created branch %1$s at %2$s</string>
    <string name="delete_tag_at">Delete tag %1$s at %2$s</string>
    <string name="delete_branch_at">Delete branch %1$s at %2$s</string>
    <string name="published_release_at">Published release %1$s at %2$s</string>
    <string name="opened_issue_at">Opened issue %1$d in %2$s</string>
    <string name="closed_issue_at">Closed issue %1$d in %2$s</string>
    <string name="reopened_issue_at">Reopened issue %1$d in %2$s</string>
    <string name="edited_issue_at">Edited issue %1$d in %2$s</string>
    <string name="assigned_issue_at">Assigned issue %1$d in %2$s</string>
    <string name="unassigned_issue_at">Unassigned issue %1$d in %2$s</string>
    <string name="labeled_issue_at">Labeled issue %1$d in %2$s</string>
    <string name="unlabeled_issue_at">Unlabeled issue %1$d in %2$s</string>
    <string name="milestoned_issue_at">Milestoned issue %1$d in %2$s</string>
    <string name="demilestoned_issue_at">Demilestoned issue %1$d in %2$s</string>
    <string name="added_member_to">Added member %1$s to %2$s</string>
    <string name="deleted_member_at">Deleted member %1$s at %2$s</string>
    <string name="edited_member_at">Edited member %1$s at %2$s</string>
    <string name="made_repo_public">Made %1$s public</string>
    <string name="org_blocked_user">Org %1$s blocked user %2$s</string>
    <string name="org_unblocked_user">Org %1$s unblocked user %2$s</string>
    <string name="created_pull_request_comment_at">Created pull request review comment at %1$s</string>
    <string name="deleted_pull_request_comment_at">Deleted pull request review comment at %1$s</string>
    <string name="edited_pull_request_comment_at">Edited pull request review comment at %1$s</string>
    <string name="submitted_pull_request_review_at">Submitted pull request review at %1$s</string>
    <string name="edited_pull_request_review_at">Edited pull request review at %1$s</string>
    <string name="dismissed_pull_request_review_at">Dismissed pull request review at %1$s</string>

    <string name="created">Created</string>
    <string name="assigned">Assigned</string>
    <string name="mentioned">Mentioned</string>
    <string name="participated">Participated</string>

    <string name="opened">Opened</string>
    <string name="closed">Closed</string>
    <string name="all">All</string>
</resources>
